--- a/epirecipes.SI.Rmd
+++ b/epirecipes.SI.Rmd
@@ -1,89 +1,130 @@
 ---
 title: "SI model of a vaccine trial"
-author: "Josh Herbeck"
+author: ""
 date: '`r Sys.Date()`'
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library(deSolve)
-library(reshape2)
-library(ggplot2)
+library("deSolve")
+library("tidyverse")
+library("EpiModel")
 ```
 
-We are modeling a closed population SI model meant to simulate a vaccine trial. We are not modeling infections from I to S but rather only from the outside population, with infection rate based on the population prevalence `Prev` (of viremic individuals), the exposure rate (serodiscordant sexual contacts per time) `c`, and the transmission rate (per contact) `p`. The per contact effect of vaccination is `epsilon`.
+We are modeling a closed population SI model meant to simulate a vaccine trial. We are not modeling infections from I to S but rather only infections from the outside population, with infection rate based on the population prevalence `prev` (of viremic individuals), the exposure rate (serodiscordant sexual contacts per time) `c`, and the transmission rate (per contact) `p`. The per contact effect of vaccination is `epsilon`, and at this iteration of the model `epsilon` is not time-varying (the per contact vaccine effect does not decay over time). 
 
-p = transmission rate (per contact)  
+p = transmission rate (per contact)   
 c = exposure rate (serodiscordant sexual contacts per time)  
-Prev = prevalence  (This should probably be prevalence of viremic individuals)
-lambda = p * c * Prev  
-epsilon = per contact vaccine efficacy; vaccine-induced reduction in the risk of HIV infection from a single exposure
+prev = prevalence  (this should probably be prevalence of viremic individuals)  
+lambda = p * c * prev  
+epsilon = per contact vaccine efficacy; vaccine-induced reduction in the risk of HIV infection from a single exposure  
 
 ## Model setup
 
-`dS/dt = -lambda*S`  
-`dI/dt = lambda*S`
+Basic functions:  
+
+`dS/dt = -lambda*S`   
+`dI/dt = lambda*S`  
 
 Sp = susceptible placebo  
 Ip = infected placebo  
 Sv = susceptible vaccinated  
-Iv = infected vaccinated
+Iv = infected vaccinated  
 
 Svh = susceptible vaccinated high exposure  
 SvL = susceptible vaccinated low exposure  
 Ivh = infected vaccinated high exposure  
-Ivl = infected vaccinated low exposure
+Ivl = infected vaccinated low exposure  
 
-```{r}
-p = 0.01   #transmission rate (per contact)
-c = 0.3   #contact rate (contacts per time)
-Prev <- 0.20
-lambda <- p*c*Prev
+```{r parameters}
+
+p <- 0.01   #transmission rate (per contact)
+c <- 0.25   #contact rate (contacts per time)
+prev <- 0.20
+lambda <- p*c*prev
 epsilon <- 0.50 #per act vaccine efficacy
 risk <- 3.0 #risk multiplier
-
-parms <- c(lambda, epsilon, risk)
-init <- c(Sv=1000,Iv=1,Sp=1000,Ip=1,Svh=500,Ivh=1,Svl=500,Ivl=1)
-times <- seq(from=1, to=365*3, by=1)
-
-sir_ode <- function(times, init, parms){
-  with(as.list(c(init, parms)), {
-  # ODEs
-    
-  # vaccine; homogeneous risk
-  #Nv <- Sv+Iv
-  dSv <- -lambda*epsilon*Sv
-  dIv <- lambda*epsilon*Sv 
+```
   
-  # vaccine; heterogeneous risk
-  #Nv.risk <- Svh+Ivh+Svl+Ivl
-  dSvh <- -risk*lambda*(1-epsilon)*Svh
-  dIvh <- risk*lambda*(1-epsilon)*Svh 
-  dSvl <- -lambda*(1-epsilon)*Svl
-  dIvl <- lambda*(1-epsilon)*Svl
-    
-  #placebo
-  #Np = Sp+Ip
-  dSp <- -lambda*Sp
-  dIp <- lambda*Sp
   
-  return(list(c(dSv,dIv,dSp,dIp,dSvh,dIvh,dSvl,dIvl)))
+```{r ODE model}
+
+si_ode <- function(times, init, param){
+  with(as.list(c(init, param)), {
+    
+    # Flows
+    # the number of people moving from S to I at each time step
+    SIp.flow <- lambda*Sp
+    SIv.flow <- lambda*epsilon*Sv
+    SIvh.flow <- risk*lambda*(1-epsilon)*Svh
+    SIvl.flow <- lambda*(1-epsilon)*Svl
+    
+    # ODEs
+    #placebo; homogeneous risk
+    dSp <- -SIp.flow
+    dIp <- SIp.flow  #lambda*Sp
+    
+    # vaccine; homogeneous risk
+    dSv <- -SIv.flow
+    dIv <- SIv.flow  #lambda*epsilon*Sv
+
+    # vaccine; heterogeneous risk
+    dSvh <- -SIvh.flow
+    dIvh <- SIvh.flow  #risk*lambda*(1-epsilon)*Svh
+    dSvl <- -SIvl.flow
+    dIvl <- SIvl.flow  #lambda*(1-epsilon)*Svl
+
+    #Output
+    list(c(dSp,dIp,
+           dSv,dIv,
+           dSvh,dIvh,
+           dSvl,dIvl,
+           SIp.flow,SIv.flow,SIvh.flow,SIvl.flow))
   })
 }
+```
+  
+  
+```{r EpiModel}
 
-sir_out <- lsoda(init, times, sir_ode, parms)
+param <- param.dcm(lambda = lambda, epsilon = epsilon, risk = risk)
+init <- init.dcm(Sp = 5000, Ip = 1,
+                 Sv = 5000, Iv = 1,
+                 Svh = 2500, Ivh = 1, 
+                 Svl = 2500, Ivl = 1,
+                 SIp.flow = 0, SIv.flow = 0, SIvh.flow = 0, SIvl.flow = 0)
+
+control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
+
+mod <- dcm(param, init, control)
+mod
+
+df <- as.data.frame(mod)
+head(df, 25)
+```
+  
+
+```{r Incidence calculation}
+
+df$years <- df$time/365  #Changing to years
+df$Svh.Svl <- df$Svh + df$Svl   #Summing all susceptible in heterogeneous risk pop
+df$Ivh.Ivl <- df$Ivh + df$Ivl   ##Summing all infected in heterogeneous risk pop
+
+
 ```
 
-```{r}
-sir_out_long <- melt(as.data.frame(sir_out), "time")
-sir_out_inf <- sir_out_long[sir_out_long$variable %in% c('Iv', 'Ip','Ivl','Ivh'),]
+   
+```{r plots}
+
+par(mar = c(3,3,2,1), mgp = c(2,1,0))
+plot(mod, y = c("Iv", "Ivh", "Ip", "Ivl"), 
+     alpha = 0.8, 
+     main = "Cumulative infections",
+     legend = "full")
+plot(mod, y = c("SIv.flow", "SIvh.flow", "SIp.flow", "SIvl.flow"), 
+     alpha = 0.8, 
+     main = "Daily infections",
+     legend = "full")
 ```
 
-```{r}
-ggplot(sir_out_inf, aes(x=time/365, y=value, color=variable, group=variable))+
-  #Add line
-  geom_line(lwd=2) +
-  #Add labels
-  xlab("Years") + ylab("Infections")
-```
 
