--- a/Leaky.vaccine.SI.trial.Rmd
+++ b/Leaky.vaccine.SI.trial.Rmd
@@ -6,24 +6,25 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library("deSolve")
-library("tidyverse")
-library("EpiModel")
+library(deSolve)
+library(tidyverse)
+library(EpiModel)
+library(survival)
 ```
 
 We are modeling a closed population SI model meant to simulate a vaccine trial. We are not modeling infections from I to S but rather only infections from the outside population, with infection rate based on the population prevalence `prev` (of viremic individuals), the exposure rate (serodiscordant sexual contacts per time) `c`, and the transmission rate (per contact) `p`. The per contact effect of vaccination is `epsilon`, and at this iteration of the model `epsilon` is not time-varying (the per contact vaccine effect does not decay over time). 
 
 `p` = transmission rate (per contact)   
 `c` = exposure rate (serodiscordant sexual contacts per time)  
-`prev` = prevalence  (this should probably be prevalence of viremic individuals)  
+`prev` = prevalence  (prevalence of viremic individuals)  
 `lambda = p * c * prev`  
 `epsilon` = per contact vaccine efficacy; vaccine-induced reduction in the risk of HIV infection from a single exposure  
 
 We us an initial calibration of the infection parameters borrowing from Vandormael (2018):    
 
-"We used realistic parameter values for the SIR model, based on earlier HIV studies that have been undertaken in the sub-Saharan Africa context. To this extent, we varied `c` within the range of 50 to 120 sexual acts per year based on data collected from serodiscordant couples across eastern and southern African sites. Previous research has shown considerable heterogeneity in the probability of HIV transmission per sexual contact, largely due to factors associated with the viral load level, genital ulcer disease, stage of HIV progression, condom use, circumcision and use of anti-retroviral therapy (ART). Following a systematic review of this topic by Boily et al.,51 we selected values for β within the range of 0.003–0.008. ... Here, we chose values for v within the range of 0.15–0.35, which are slightly conservative, but supported by population-based estimates from the sub-Saharan African context"
+"We used realistic parameter values for the SIR model, based on earlier HIV studies that have been undertaken in the sub-Saharan Africa context. To this extent, we varied `c` within the range of 50 to 120 sexual acts per year based on data collected from serodiscordant couples across eastern and southern African sites. Previous research has shown considerable heterogeneity in the probability of HIV transmission per sexual contact, largely due to factors associated with the viral load level, genital ulcer disease, stage of HIV progression, condom use, circumcision and use of ART. Following a systematic review of this topic by Boily et al.,51 we selected values for β within the range of 0.003–0.008. ... Here, we chose values for v within the range of 0.15–0.35, which are slightly conservative, but supported by population-based estimates from the sub-Saharan African context"
 
-`c` varies from 50 to 120   
+`c` varies from 50 to 120 per year   
 `p` varies from 0.003 to 0.008  
 `prev`, which here is population prevalence of unsuppressed VL, varies from 0.15 to 0.35  
 
@@ -46,9 +47,9 @@ Ivl = infected vaccinated low exposure
 
 ```{r parameters}
 
-p <- 0.01   #transmission rate (per contact)
-c <- 0.25   #contact rate (contacts per time)
-prev <- 0.20
+p <- 0.005   #transmission rate (per contact)
+c <- 100/365   #contact rate (contacts per day)
+prev <- 0.25
 lambda <- p*c*prev
 epsilon <- 0.50 #per act vaccine efficacy
 risk <- 3.0 #risk multiplier
@@ -64,11 +65,15 @@ si_ode <- function(times, init, param){
     # the number of people moving from S to I at each time step
     SIp.flow <- lambda*Sp
     SIv.flow <- lambda*epsilon*Sv
+    
+    SIph.flow <- risk*lambda*Sph
+    SIpl.flow <- lambda*Spl
     SIvh.flow <- risk*lambda*(1-epsilon)*Svh
     SIvl.flow <- lambda*(1-epsilon)*Svl
     
+    
     # ODEs
-    #placebo; homogeneous risk
+    # placebo; homogeneous risk
     dSp <- -SIp.flow
     dIp <- SIp.flow  #lambda*Sp
     
@@ -76,6 +81,12 @@ si_ode <- function(times, init, param){
     dSv <- -SIv.flow
     dIv <- SIv.flow  #lambda*epsilon*Sv
 
+    # placebo; heterogeneous risk
+    dSph <- -SIph.flow
+    dIph <- SIph.flow  #risk*lambda*Sph
+    dSpl <- -SIpl.flow
+    dIpl <- SIpl.flow  #lambda*Spl
+    
     # vaccine; heterogeneous risk
     dSvh <- -SIvh.flow
     dIvh <- SIvh.flow  #risk*lambda*(1-epsilon)*Svh
@@ -85,9 +96,11 @@ si_ode <- function(times, init, param){
     #Output
     list(c(dSp,dIp,
            dSv,dIv,
+           dSph,dIph,
+           dSpl,dIpl,
            dSvh,dIvh,
            dSvl,dIvl,
-           SIp.flow,SIv.flow,SIvh.flow,SIvl.flow))
+           SIp.flow,SIv.flow,SIph.flow,SIpl.flow,SIvh.flow,SIvl.flow))
   })
 }
 ```
@@ -98,26 +111,38 @@ si_ode <- function(times, init, param){
 param <- param.dcm(lambda = lambda, epsilon = epsilon, risk = risk)
 init <- init.dcm(Sp = 5000, Ip = 1,
                  Sv = 5000, Iv = 1,
+                 Sph = 2500, Iph = 2500,
+                 Spl = 2500, Ipl = 2500,
                  Svh = 2500, Ivh = 1, 
                  Svl = 2500, Ivl = 1,
-                 SIp.flow = 0, SIv.flow = 0, SIvh.flow = 0, SIvl.flow = 0)
+                 SIp.flow = 0, SIv.flow = 0, 
+                 SIph.flow = 0,SIpl.flow = 0,
+                 SIvh.flow = 0, SIvl.flow = 0)
 
 control <- control.dcm(nsteps = 365*3, new.mod = si_ode)
 
 mod <- dcm(param, init, control)
 mod
-
-df <- as.data.frame(mod)
-head(df, 25)
 ```
   
 
-```{r Incidence calculation}
+```{r data}
+df <- as.data.frame(mod)
+df <- lapply(df, round) #basically serves to round the daily flow counts
+head(df, 5)
+
 
 df$years <- df$time/365  #Changing to years
-df$Svh.Svl <- df$Svh + df$Svl   #Summing all susceptible in heterogeneous risk pop
-df$Ivh.Ivl <- df$Ivh + df$Ivl   ##Summing all infected in heterogeneous risk pop
+df <- transform(df, num.Sp.flow = Sp + SIp.flow) #all susceptible and new infections in homogeneous risk placebo pop, at each time step
+df <- transform(df, num.Sv.flow = Sv + SIv.flow) #all susceptible and new infections in homogeneous risk vaccinated pop
+df <- transform(df, num.Svh.Svl.flow = Svh + Svl + SIvh.flow + SIvl.flow) #all susceptible and new infections in heterogeneous risk vaccine pop
+df <- transform(df, num.Sph.Spl.flow = Sph + Spl + SIph.flow + SIpl.flow) #all susceptible and new infections in heterogeneous risk placebo pop
 
+#Incidence
+df <- transform(df, rate.Vaccine = (SIv.flow/num.Sv.flow)*100)
+df <- transform(df, rate.Placebo = (SIp.flow/num.Sp.flow)*100)
+df <- transform(df, rate.Vaccine.het = (SIvh.flow/num.Svh.Svl.flow)*100)
+df <- transform(df, rate.Placebo.het = (SIph.flow/num.Sph.Spl.flow)*100)
 
 ```
 
@@ -133,6 +158,9 @@ plot(mod, y = c("SIv.flow", "SIvh.flow", "SIp.flow", "SIvl.flow"),
      alpha = 0.8, 
      main = "Daily infections",
      legend = "full")
+plot(df$t)
 ```
+
+The incidence rate per 100 person-years is given by dividing the number of newly infected participants Ij by Nj for jth time interval.
 
 
